# ntsc-rs-obs

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/run-clang-format/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/actions/setup-macos-codesigning/: action.yaml
.github/workflows/: build-project.yaml
ntscrs-cbind/: Cargo.toml  cbindgen.toml  ntscrs.h
ntscrs-cbind/src/: lib.rs
src/: plugin-main.c  plugin-props.h  plugin-support.c.in  plugin-support.h
